--- a/app/project.html
+++ b/app/project.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Welcome to My Project</h1>
     <p>This is the project description.</p>
-    <a href="index.html">Go Back to Home</a>
+    <a href="/">Go Back to Home</a>
 </body>
 </html>
