--- a/project/謎途高揚.html
+++ b/project/謎途高揚.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Page</title>
+    <title>謎途高揚</title>
 </head>
 <body>
-    <h1>Welcome to My Project</h1>
+    <h1>Welcome to 謎途高揚</h1>
     <p>This is the project description.</p>
     <a href="/">Go Back to Home</a>
 </body>
