--- a/project/謎途高揚.html
+++ b/project/謎途高揚.html
@@ -1,14 +1,80 @@
-<!-- project.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>謎途高揚</title>
+    <title>迷途羔羊</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 15px;
+            text-align: center;
+        }
+        .container {
+            margin: 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+        .card {
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            text-align: center;
+            transition: transform 0.2s;
+        }
+        .card:hover {
+            transform: scale(1.05);
+        }
+        .card img {
+            width: 100%;
+            height: auto;
+        }
+        .card h3 {
+            margin: 10px 0;
+            padding: 0 10px;
+        }
+        .card a {
+            display: inline-block;
+            margin: 10px 0;
+            padding: 10px 20px;
+            background: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        .card a:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to 謎途高揚</h1>
-    <p>This is the project description.</p>
-    <a href="/">Go Back to Home</a>
+    <header>
+        <h1>迷途羔羊</h1>
+        <p>探索不同畫板活動，了解更多！</p>
+    </header>
+    <div class="container">
+        <!-- 活動卡片 -->
+        <div class="card">
+            <img src="path/to/event1.jpg" alt="命運的絲線">
+            <h3>命運的絲線</h3>
+            <a href="activity.html">查看詳情</a>
+        </div>
+        <div class="card">
+            <img src="path/to/event2.jpg" alt="其他活動">
+            <h3>其他活動</h3>
+            <a href="other_activity.html">查看詳情</a>
+        </div>
+        <!-- 可新增更多活動 -->
+    </div>
 </body>
 </html>
