feat: 迷途羔羊 + activity card

--- a/project/謎途高揚.html
+++ b/project/謎途高揚.html
@@ -12,6 +12,36 @@
         <p>點選活動卡片了解更多詳情</p>
     </header>
 
+    <!-- 團隊介紹區塊 -->
+    <section class="team-introduction">
+        <h2>我們的團隊</h2>
+        <p>我們是一群熱衷於探索文化與創意的人，致力於為您帶來獨特且具有意義的活動體驗。我們的團隊成員來自各行各業，每一位都在這個項目中貢獻了自己的專業和熱情。</p>
+        <div class="team-members">
+            <div class="team-member">
+                <img src="images/team1.jpg" alt="團隊成員1">
+                <h3>小明</h3>
+                <p>專注於活動策劃和執行，負責每一場活動的流程管理。</p>
+            </div>
+            <div class="team-member">
+                <img src="images/team2.jpg" alt="團隊成員2">
+                <h3>小華</h3>
+                <p>負責設計和創意，將每個活動的視覺效果與主題相結合。</p>
+            </div>
+            <div class="team-member">
+                <img src="images/team3.jpg" alt="團隊成員3">
+                <h3>小美</h3>
+                <p>負責媒體宣傳，確保每場活動得到適當的曝光和推廣。</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- 官方 Line QRCode -->
+    <section class="line-qrcode">
+        <h2>加入我們的官方 Line</h2>
+        <p>掃描下方 QR Code，與我們保持聯繫，了解最新活動資訊！</p>
+        <img src="images/line-qrcode.png" alt="官方 Line QRCode" class="qrcode-img">
+    </section>
+
     <section class="events">
         <div class="card">
             <img src="images/event1.jpg" alt="命運的絲線">
