style: stylish css page

--- a/project/index.html
+++ b/project/index.html
@@ -48,7 +48,7 @@
             <div class="card-content">
                 <h3>命運的絲線</h3>
                 <p>愛情、手藝與迪化街的宿命</p>
-                <a href="destiny-thread.html">查看詳情</a>
+                <a href="destiny.html">查看詳情</a>
             </div>
         </div>
 
@@ -57,7 +57,7 @@
             <div class="card-content">
                 <h3>首座體驗</h3>
                 <p>一場關於傳統工藝的動手之旅</p>
-                <a href="hands-on-experience.html">查看詳情</a>
+                <a href="handcraft.html">查看詳情</a>
             </div>
         </div>
     </section>
