fix: href of index page

--- a/project/index.html
+++ b/project/index.html
@@ -48,16 +48,16 @@
             <div class="card-content">
                 <h3>命運的絲線</h3>
                 <p>愛情、手藝與迪化街的宿命</p>
-                <a href="destiny.html">查看詳情</a>
+                <a href="./destiny.html">查看詳情</a>
             </div>
         </div>
 
         <div class="card">
             <img src="images/event2.jpg" alt="首座體驗">
             <div class="card-content">
-                <h3>首座體驗</h3>
+                <h3>手作體驗</h3>
                 <p>一場關於傳統工藝的動手之旅</p>
-                <a href="handcraft.html">查看詳情</a>
+                <a href="./handcraft.html">查看詳情</a>
             </div>
         </div>
     </section>
