--- a/project/index.html
+++ b/project/index.html
@@ -1,69 +1,38 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>迷途羔羊活動</title>
+    <title>迷途羔羊</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>迷途羔羊</h1>
-        <p>點選活動卡片了解更多詳情</p>
+        <p>探索命運的絲線，與我們一起進入這場活動。</p>
+        <img src="line-qr-code.png" alt="官方 Line QR Code" class="qr-code">
     </header>
 
-    <!-- 團隊介紹區塊 -->
     <section class="team-introduction">
-        <h2>我們的團隊</h2>
-        <p>我們是一群熱衷於探索文化與創意的人，致力於為您帶來獨特且具有意義的活動體驗。我們的團隊成員來自各行各業，每一位都在這個項目中貢獻了自己的專業和熱情。</p>
+        <h2>團隊介紹</h2>
+        <p>我們的團隊來自不同領域，結合了設計與創意。</p>
         <div class="team-members">
             <div class="team-member">
-                <img src="images/team1.jpg" alt="團隊成員1">
-                <h3>小明</h3>
-                <p>專注於活動策劃和執行，負責每一場活動的流程管理。</p>
+                <img src="team1.jpg" alt="Team Member">
+                <h3>成員1</h3>
+                <p>設計師</p>
             </div>
             <div class="team-member">
-                <img src="images/team2.jpg" alt="團隊成員2">
-                <h3>小華</h3>
-                <p>負責設計和創意，將每個活動的視覺效果與主題相結合。</p>
-            </div>
-            <div class="team-member">
-                <img src="images/team3.jpg" alt="團隊成員3">
-                <h3>小美</h3>
-                <p>負責媒體宣傳，確保每場活動得到適當的曝光和推廣。</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- 官方 Line QRCode -->
-    <section class="line-qrcode">
-        <h2>加入我們的官方 Line</h2>
-        <p>掃描下方 QR Code，與我們保持聯繫，了解最新活動資訊！</p>
-        <img src="images/line-qrcode.png" alt="官方 Line QRCode" class="qrcode-img">
-    </section>
-
-    <section class="events">
-        <div class="card">
-            <img src="images/event1.jpg" alt="命運的絲線">
-            <div class="card-content">
-                <h3>命運的絲線</h3>
-                <p>愛情、手藝與迪化街的宿命</p>
-                <a href="./destiny.html">查看詳情</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="images/event2.jpg" alt="首座體驗">
-            <div class="card-content">
-                <h3>手作體驗</h3>
-                <p>一場關於傳統工藝的動手之旅</p>
-                <a href="./handcraft.html">查看詳情</a>
+                <img src="team2.jpg" alt="Team Member">
+                <h3>成員2</h3>
+                <p>工程師</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>© 2024 迷途羔羊活動</p>
+        <p>© 2024 迷途羔羊</p>
     </footer>
 </body>
 </html>
