style: add line image

--- a/project/handcraft.html
+++ b/project/handcraft.html
@@ -26,11 +26,12 @@
         <p>請通過下面的聯繫方式預約您的參與：</p>
         <ul>
             <li><strong>官方 LINE：</strong>掃描下方 QR Code</li>
+            <img src="images/line_friends.png" alt="官方 Line QR Code" class="qr-code">
             <li><strong>預約連結：</strong><a href="https://line.me/ti/p/XXXXXXXXXX">點此預約</a></li>
         </ul>
 
         <h3>活動詳情圖片：</h3>
-        <img src="images/event2.jpg" alt="首座體驗活動">
+        <img src="images/event2.jpg" alt="手作體驗活動">
 
         <footer>
             <p>© 2024 迷途羔羊活動</p>
