--- a/project/index.html
+++ b/project/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>迷途羔羊</h1>
         <p>探索命運的絲線，與我們一起進入這場活動。</p>
-        <img src="line-qr-code.png" alt="官方 Line QR Code" class="qr-code">
+        <img src="images/line_friends.png" alt="官方 Line QR Code" class="qr-code">
     </header>
 
     <section class="team-introduction">
