style: do some optimize

--- a/project/index.html
+++ b/project/index.html
@@ -39,7 +39,7 @@
 
     <!-- 官方 Line QRCode -->
     <section class="line-qrcode">
-        <h2>加入我們的官方 Line</h2>
+        <h2>加入官方 Line</h2>
         <p>掃描下方 QR Code，與我們保持聯繫，了解最新活動資訊！</p>
         <img src="images/line_friends.png" alt="官方 Line QRCode" class="qrcode-img">
     </section>
