style: add character icon for everyonse

--- a/project/destiny.html
+++ b/project/destiny.html
@@ -31,7 +31,7 @@
         </ul>
 
         <h3>活動詳情圖片：</h3>
-        <img src="images/event1.jpg" alt="命運的絲線活動">
+        <img src="images/street.jpg" alt="命運的絲線活動">
 
         <footer>
             <p>© 2024 迷途羔羊活動</p>
