--- a/project/handcraft.html
+++ b/project/handcraft.html
@@ -31,7 +31,7 @@
         </ul>
 
         <h3>活動詳情圖片：</h3>
-        <img src="images/event2.jpg" alt="手作體驗活動">
+        <img src="images/handcraft.jpg" alt="手作體驗活動">
 
         <footer>
             <p>© 2024 迷途羔羊活動</p>
