--- a/project/index.html
+++ b/project/index.html
@@ -18,20 +18,27 @@
         <p>我們是一群熱衷於探索文化與創意的人，致力於為您帶來獨特且具有意義的活動體驗。我們的團隊成員來自各行各業，每一位都在這個項目中貢獻了自己的專業和熱情。</p>
         <div class="team-members">
             <div class="team-member">
-                <img src="images/team1.jpg" alt="團隊成員1">
-                <h3>小明</h3>
+                <img src="images/team_chen.png" alt="團隊成員1">
+                <h3>陳彥閎</h3>
                 <p>專注於活動策劃和執行，負責每一場活動的流程管理。</p>
             </div>
             <div class="team-member">
-                <img src="images/team2.jpg" alt="團隊成員2">
-                <h3>小華</h3>
+                <img src="images/team_tsai.png" alt="團隊成員2">
+                <h3>蔡佳穎</h3>
                 <p>負責設計和創意，將每個活動的視覺效果與主題相結合。</p>
             </div>
         </div>
         <div class="team-members">
             <div class="team-member">
-                <img src="images/team3.jpg" alt="團隊成員3">
-                <h3>小美</h3>
+                <img src="images/team_ryan.png" alt="團隊成員3">
+                <h3>鄭睿宏</h3>
+                <p>負責網站架設，用創意為客戶打造與眾不同的體驗</p>
+            </div>
+        </div>
+        <div class="team-members">
+            <div class="team-member">
+                <img src="images/team_carry.png" alt="團隊成員3">
+                <h3>陳楷璿</h3>
                 <p>負責媒體宣傳，確保每場活動得到適當的曝光和推廣。</p>
             </div>
         </div>
@@ -47,7 +54,7 @@
     <!-- 活動介紹區塊 -->
     <section class="events">
         <div class="card">
-            <img src="images/event1.jpg" alt="命運的絲線">
+            <img src="images/street.jpg" alt="命運的絲線">
             <div class="card-content">
                 <h3>命運的絲線</h3>
                 <p>愛情、手藝與迪化街的宿命</p>
@@ -56,7 +63,7 @@
         </div>
 
         <div class="card">
-            <img src="images/event2.jpg" alt="手作體驗">
+            <img src="images/handcraft.jpg" alt="手作體驗">
             <div class="card-content">
                 <h3>手作體驗</h3>
                 <p>一場關於傳統工藝的動手之旅</p>
