feat: add return home button

--- a/project/handcraft.html
+++ b/project/handcraft.html
@@ -32,10 +32,37 @@
 
         <h3>活動詳情圖片：</h3>
         <img src="images/handcraft.jpg" alt="手作體驗活動">
-
-        <footer>
-            <p>© 2024 迷途羔羊活動</p>
-        </footer>
     </section>
+
+    <!-- 回到首頁按鈕 -->
+    <div class="back-home">
+        <a href="index.html" class="btn-home">回到首頁</a>
+    </div>
+
+    <footer>
+        <p>© 2024 迷途羔羊活動</p>
+    </footer>
+
+    
+    <style>
+        /* 按鈕的樣式 */
+        .back-home {
+            text-align: center;
+            margin: 20px 0;
+        }
+        .btn-home {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #007bff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .btn-home:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </body>
 </html>
