--- a/project/destiny.html
+++ b/project/destiny.html
@@ -36,7 +36,7 @@
 
     <!-- 回到首頁按鈕 -->
     <div class="back-home">
-        <a href="index.html" class="btn-home">回到首頁</a>
+        <a href="./index.html" class="btn-home">回到首頁</a>
     </div>
 
     <footer>
