--- a/project/index.html
+++ b/project/index.html
@@ -17,9 +17,8 @@
     <section class="carousel">
         <div class="carousel-container">
             <div class="carousel-slide">
-                <img src="images/banner1.jpg" alt="活動圖1">
-                <img src="images/banner2.jpg" alt="活動圖2">
-                <img src="images/banner3.jpg" alt="活動圖3">
+                <img src="images/handcraft.jpg" alt="活動圖1">
+                <img src="images/street.jpg" alt="活動圖2">
             </div>
         </div>
     </section>
@@ -84,5 +83,56 @@
     <footer>
         <p>© 2024 迷途羔羊活動</p>
     </footer>
+
+
+    <!-- 嵌入 JavaScript -->
+    <script>
+        // 輪播功能
+        let currentIndex = 0;
+        const slides = document.querySelectorAll('.carousel-slide img');
+        const totalSlides = slides.length;
+
+        function showNextSlide() {
+            slides[currentIndex].style.display = 'none';
+            currentIndex = (currentIndex + 1) % totalSlides;
+            slides[currentIndex].style.display = 'block';
+        }
+
+        slides.forEach(slide => (slide.style.display = 'none'));
+        slides[0].style.display = 'block';
+        setInterval(showNextSlide, 3000);
+
+        // 模態彈窗功能
+        const modal = document.getElementById('modal');
+        const showModal = document.getElementById('showModal');
+        const closeModal = document.getElementById('closeModal');
+
+        showModal.addEventListener('click', () => {
+            modal.style.display = 'block';
+        });
+
+        closeModal.addEventListener('click', () => {
+            modal.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+
+        // 卡片互動效果
+        const cards = document.querySelectorAll('.card');
+        cards.forEach(card => {
+            card.addEventListener('mouseenter', () => {
+                card.style.boxShadow = '0 8px 20px rgba(0, 0, 0, 0.2)';
+            });
+
+            card.addEventListener('mouseleave', () => {
+                card.style.boxShadow = '0 4px 10px rgba(0, 0, 0, 0.1)';
+            });
+        });
+    </script>
+
 </body>
 </html>
