--- a/project/index.html
+++ b/project/index.html
@@ -19,6 +19,7 @@
             <div class="carousel-slide">
                 <img src="images/handcraft.jpg" alt="活動圖1">
                 <img src="images/street.jpg" alt="活動圖2">
+                <img src="images/keelung.jpg" alt="活動圖3">
             </div>
         </div>
     </section>
@@ -75,61 +76,72 @@
     <!-- Line 加入 QRCode -->
     <section class="line-qrcode">
         <h2>加入官方 Line</h2>
-        <p>掃描下方 QR Code 與我們保持聯繫！</p>
-        <img src="images/line_friends.png" alt="官方 Line QRCode">
+        <button id="openModal">掃描 QR Code</button>
     </section>
+
+    <!-- 模態框 -->
+    <div class="modal" id="modal">
+        <div class="modal-content">
+            <span id="closeModal" class="close">&times;</span>
+            <img src="images/line_friends.png" alt="官方 Line QRCode">
+        </div>
+    </div>
 
     <!-- 頁腳 -->
     <footer>
         <p>© 2024 迷途羔羊活動</p>
     </footer>
 
-
-    <!-- 嵌入 JavaScript -->
     <script>
         // 輪播功能
         let currentIndex = 0;
-        const slides = document.querySelectorAll('.carousel-slide img');
+        const slides = document.querySelectorAll(".carousel-slide img");
         const totalSlides = slides.length;
 
-        function showNextSlide() {
-            slides[currentIndex].style.display = 'none';
-            currentIndex = (currentIndex + 1) % totalSlides;
-            slides[currentIndex].style.display = 'block';
+        function showSlide(index) {
+            const carouselContainer = document.querySelector(".carousel-container");
+            carouselContainer.style.transform = `translateX(-${index * 100}%)`;
         }
 
-        slides.forEach(slide => (slide.style.display = 'none'));
-        slides[0].style.display = 'block';
-        setInterval(showNextSlide, 3000);
+        function startCarousel() {
+            setInterval(() => {
+                currentIndex = (currentIndex + 1) % totalSlides;
+                showSlide(currentIndex);
+            }, 3000); // 每三秒切換
+        }
+        startCarousel();
 
         // 模態彈窗功能
-        const modal = document.getElementById('modal');
-        const showModal = document.getElementById('showModal');
-        const closeModal = document.getElementById('closeModal');
+        const modal = document.getElementById("modal");
+        const openModalBtn = document.getElementById("openModal");
+        const closeModalBtn = document.getElementById("closeModal");
 
-        showModal.addEventListener('click', () => {
-            modal.style.display = 'block';
+        openModalBtn.addEventListener("click", () => {
+            modal.style.display = "block";
         });
 
-        closeModal.addEventListener('click', () => {
-            modal.style.display = 'none';
+        closeModalBtn.addEventListener("click", () => {
+            modal.style.display = "none";
         });
 
-        window.addEventListener('click', (event) => {
+        window.addEventListener("click", (event) => {
             if (event.target === modal) {
-                modal.style.display = 'none';
+                modal.style.display = "none";
             }
         });
 
-        // 卡片互動效果
-        const cards = document.querySelectorAll('.card');
-        cards.forEach(card => {
-            card.addEventListener('mouseenter', () => {
-                card.style.boxShadow = '0 8px 20px rgba(0, 0, 0, 0.2)';
+        // 卡片互動功能
+        const cards = document.querySelectorAll(".card");
+
+        cards.forEach((card) => {
+            card.addEventListener("mouseenter", () => {
+                card.style.boxShadow = "0 6px 15px rgba(0, 0, 0, 0.2)";
+                card.style.transform = "scale(1.05)";
             });
 
-            card.addEventListener('mouseleave', () => {
-                card.style.boxShadow = '0 4px 10px rgba(0, 0, 0, 0.1)';
+            card.addEventListener("mouseleave", () => {
+                card.style.boxShadow = "0 4px 10px rgba(0, 0, 0, 0.1)";
+                card.style.transform = "scale(1)";
             });
         });
     </script>
