--- a/project/index.html
+++ b/project/index.html
@@ -76,16 +76,9 @@
     <!-- Line 加入 QRCode -->
     <section class="line-qrcode">
         <h2>加入官方 Line</h2>
-        <button id="openModal">掃描 QR Code</button>
+        <p>掃描下方 QR Code 與我們保持聯繫！</p>
+        <img src="images/line_friends.png" alt="官方 Line QRCode">
     </section>
-
-    <!-- 模態框 -->
-    <div class="modal" id="modal">
-        <div class="modal-content">
-            <span id="closeModal" class="close">&times;</span>
-            <img src="images/line_friends.png" alt="官方 Line QRCode">
-        </div>
-    </div>
 
     <!-- 頁腳 -->
     <footer>
@@ -111,40 +104,6 @@
             }, 1000); // 每三秒切換
         }
         startCarousel();
-
-        // 模態彈窗功能
-        const modal = document.getElementById("modal");
-        const openModalBtn = document.getElementById("openModal");
-        const closeModalBtn = document.getElementById("closeModal");
-
-        openModalBtn.addEventListener("click", () => {
-            modal.style.display = "block";
-        });
-
-        closeModalBtn.addEventListener("click", () => {
-            modal.style.display = "none";
-        });
-
-        window.addEventListener("click", (event) => {
-            if (event.target === modal) {
-                modal.style.display = "none";
-            }
-        });
-
-        // 卡片互動功能
-        const cards = document.querySelectorAll(".card");
-
-        cards.forEach((card) => {
-            card.addEventListener("mouseenter", () => {
-                card.style.boxShadow = "0 6px 15px rgba(0, 0, 0, 0.2)";
-                card.style.transform = "scale(1.05)";
-            });
-
-            card.addEventListener("mouseleave", () => {
-                card.style.boxShadow = "0 4px 10px rgba(0, 0, 0, 0.1)";
-                card.style.transform = "scale(1)";
-            });
-        });
     </script>
 
 </body>
