style: photo frame carousel

--- a/project/index.html
+++ b/project/index.html
@@ -14,15 +14,16 @@
     </header>
 
     <!-- Carousel 區塊 -->
-    <section class="carousel">
+    <div class="carousel-wrapper">
         <div class="carousel-container">
-            <div class="carousel-slide">
-                <img src="images/handcraft.jpg" alt="活動圖1">
-                <img src="images/street.jpg" alt="活動圖2">
-                <img src="images/keelung.jpg" alt="活動圖3">
-            </div>
+          <div class="carousel">
+            <div class="image-one"></div>
+            <div class="image-two"></div>
+            <div class="image-three"></div>
+          </div>
         </div>
-    </section>
+    </div>
+      
 
     <!-- 團隊介紹 -->
     <section class="team-introduction">
