style: carousel using javascript

--- a/project/index.html
+++ b/project/index.html
@@ -15,14 +15,13 @@
 
     <!-- Carousel 區塊 -->
     <div class="carousel-wrapper">
-        <div class="carousel-container">
-          <div class="carousel">
-            <div class="image-one"></div>
-            <div class="image-two"></div>
-            <div class="image-three"></div>
-          </div>
+        <div class="container">
+            <button id="left-btn"><i class="arrow"></i></button>
+            <img id="carousel" src="" alt="">
+            <button id="right-btn"><i class="arrow"></i></button>
         </div>
     </div>
+    <script src="carousel.js"></script>
       
 
     <!-- 團隊介紹 -->
