feat: event card

--- a/project/index.html
+++ b/project/index.html
@@ -54,21 +54,25 @@
 
     <!-- 活動卡 -->
     <section class="events">
-        <h2>近期活動</h2>
-        <div class="card">
-            <img src="images/street.jpg" alt="命運的絲線">
-            <div class="card-content">
-                <h3>命運的絲線</h3>
-                <p>愛情、手藝與迪化街的宿命</p>
-                <a href="./destiny.html">查看詳情</a>
-            </div>
+        <div>
+            <h2>近期活動</h2>
         </div>
-        <div class="card">
-            <img src="images/handcraft.jpg" alt="手作體驗">
-            <div class="card-content">
-                <h3>手作體驗</h3>
-                <p>一場關於傳統工藝的動手之旅</p>
-                <a href="./handcraft.html">查看詳情</a>
+        <div class="cards">
+            <div class="card">
+                <img src="images/street.jpg" alt="命運的絲線">
+                <div class="card-content">
+                    <h3>命運的絲線</h3>
+                    <p>愛情、手藝與迪化街的宿命</p>
+                    <a href="./destiny.html">查看詳情</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/handcraft.jpg" alt="手作體驗">
+                <div class="card-content">
+                    <h3>手作體驗</h3>
+                    <p>一場關於傳統工藝的動手之旅</p>
+                    <a href="./handcraft.html">查看詳情</a>
+                </div>
             </div>
         </div>
     </section>
