faet: event title

--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,6 @@
     <!-- 頁首 -->
     <header>
         <h1>迷途羔羊</h1>
-        <p>點選活動卡片了解更多詳情</p>
     </header>
 
     <!-- Carousel 區塊 -->
@@ -54,8 +53,9 @@
 
     <!-- 活動卡 -->
     <section class="events">
-        <div>
+        <div class="title">
             <h2>近期活動</h2>
+            <p>點選活動卡片了解更多詳情</p>
         </div>
         <div class="cards">
             <div class="card">
